# openai-buildweek-submission

./: .gitignore  README.md  epics_and_sprints.md  index.html  package-lock.json  package.json  playwright.config.ts  project_summary.md  tsconfig.json  vite.config.ts
.codex/: STORAGE_ARCHITECTURE_MEMORY.md  TEST_PARITY_MEMORY.md  UI_DESIGN_MEMORY.md  UI_ICON_MEMORY.md
docs/: index.html
docs/assets/: index-5tAi4J5l.js  index-BeBQurtW.js  index-BfkPeeiw.js  index-BndyfxRv.js  index-CVVtMKav.js  index-CZIp9vm_.css  index-CnEAVa3t.css  index-DgSAxRxM.js  (+8 more)
scripts/: add-missing-icons.sh  seed-demo-data.mjs
src/: App.svelte  main.ts
src-backend/: Cargo.toml  README.md
src-backend/migrations/: 0001_initial.sql  0002_change_triggers.sql
src-backend/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
tests/: ai-errors.test.ts  calendar-preferences.test.ts  calendar.test.ts  clerk.test.ts  custom-ai.test.ts  detail-modal-title.test.ts  documents.test.ts  events.test.ts  example-data.test.ts  icon-assets.test.ts  integrations.test.ts  launchpad-actions.test.ts  launchpad.test.ts  markdown.test.ts  navigation.test.ts  persistence.test.ts  privacy-scope.test.ts  privacy.test.ts  progress.test.ts  projects-state.test.ts  projects.test.ts  quicknotes.test.ts  routines-ui.test.ts  routines.test.ts  runtime.test.ts  search.test.ts  settings-tabs.test.ts  settings.test.ts  setup.ts  shortcuts.test.ts  sidebar.test.ts  storage.test.ts  sync.test.ts  tasks.test.ts  theme-mode.test.ts  theme.test.ts  time-logs-state.test.ts  time-logs-ui.test.ts  timer.test.ts  toast.test.ts  (+2 more)
(+89 files in other folders)
