[package]
name = "deskclerk-backend"
version = "0.1.0"
edition = "2021"
default-run = "deskclerk-backend"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "json", "uuid"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "request-id", "trace", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
